test/negative/112_empty_pattern.err
112_empty_pattern.fx:2:21: error: pattern is expected
